# movie-notifier-bot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: common-delivery.yml  daily-sync.yml  dev-delivery.yml  hourly-bot-run.yml  pr-checks.yml  prod-delivery.yml  update-rust.yml
doc/: bot-spec.md
src/: app.rs  config.rs  lib.rs  main.rs  orchestrator.rs
src/formatter/: mod.rs
src/github/: artifacts.rs
src/state/: mod.rs
src/telegram/: mod.rs
src/tmdb/: mod.rs
tests/: history_persistence.rs  orchestrator_flow.rs  telegram_dispatcher.rs
