[package]
name = "movie-notifier-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
urlencoding = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
